--- a/chatbot_v0.0.1
+++ b/chatbot_v0.0.1
@@ -8,5 +8,5 @@ def send_message(message):
     # if message is in our database return the response.
     return response[message]
   else:
-    # otherwise return something else to tell the user that it doesn't have data in database.
+    # otherwise return something else 
     return "I don't understand.."
